--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
+    "password-hash": "^1.2.2",
     "serve-favicon": "~2.4.2",
     "stylus": "^0.54.5"
   }
